refactor: 주석 제거 및 예외 처리